Finished first row

--- a/index.html
+++ b/index.html
@@ -31,13 +31,35 @@
     <div class="row">
       <div class="col-sm-6">
         <h1 class="test-right">
-        Front End Developer and Instructor
-        </h4>
+        <img src="https://melbournechapter.net/images/drawing-christmas-aesthetic.png"
+        width="150" height="200">
+      </h1>
+      </div>
+
+      <div class="col-sm-6">
+        <h1 class="test-left"><b>
+          Huhzelle B.
+        </b></h1>
       </div>
     </div>
+  </div>
 
-  <h1>My First Heading</h1>
-  <p>My first paragraph.</p>
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="">
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="">
+    </div>
+      <div class="col-sm-4">
+        <img src="">
+      </div>
+      <div class="col-sm-4">
+    </div>
+  </div>
 
 </body>
 </html>
